--- a/notebooks/temp.ipynb
+++ b/notebooks/temp.ipynb
@@ -1604,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1612,72 +1612,155 @@
      "name": "stdout",
      "text": [
       "Epoch: 0\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
       "Epoch: 1\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
       "Epoch: 2\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
       "Epoch: 3\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
       "Epoch: 4\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
       "Epoch: 5\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
       "Epoch: 6\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
       "Epoch: 7\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 5.4%\n",
       "Epoch: 8\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
       "Epoch: 9\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
       "Epoch: 10\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
       "Epoch: 11\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
       "Epoch: 12\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
       "Epoch: 13\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
       "Epoch: 14\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
       "Epoch: 15\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
       "Epoch: 16\n",
-      "\t(train)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n",
-      "\t(valid)\t|\tLoss: 0.0459\t|\tAcc: 7.4%\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-36-b1d77343da81>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mN_EPOCHS\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0mtrain_loss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain_acc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclas_trn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_trn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmodl\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcrit\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0moptm\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBATCH_SIZE\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mget_device\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     \u001b[0mvalid_loss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalid_acc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mclas_tst\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_val\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmodl\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcrit\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBATCH_SIZE\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mget_device\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\chris\\OneDrive\\02 - Education\\07 - MDSI\\09 - ADSI\\07 - GitHub Repo\\BeerPrediction\\src\\models\\pytorch.py\u001b[0m in \u001b[0;36mclas_trn\u001b[1;34m(train_data, model, criterion, optimizer, batch_size, device, scheduler, generate_batch)\u001b[0m\n\u001b[0;32m    601\u001b[0m         \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    602\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 603\u001b[1;33m         \u001b[1;31m# Update Weights\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    604\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    605\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.virtualenvs\\BeerPrediction-i6yarVT4\\lib\\site-packages\\torch\\optim\\optimizer.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     87\u001b[0m                 \u001b[0mprofile_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"Optimizer.step#{}.step\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     88\u001b[0m                 \u001b[1;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprofiler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrecord_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprofile_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 89\u001b[1;33m                     \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     90\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     91\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.virtualenvs\\BeerPrediction-i6yarVT4\\lib\\site-packages\\torch\\autograd\\grad_mode.py\u001b[0m in \u001b[0;36mdecorate_context\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     25\u001b[0m         \u001b[1;32mdef\u001b[0m \u001b[0mdecorate_context\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m             \u001b[1;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mcast\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mF\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdecorate_context\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.virtualenvs\\BeerPrediction-i6yarVT4\\lib\\site-packages\\torch\\optim\\adam.py\u001b[0m in \u001b[0;36mstep\u001b[1;34m(self, closure)\u001b[0m\n\u001b[0;32m    117\u001b[0m                    \u001b[0mgroup\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'lr'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    118\u001b[0m                    \u001b[0mgroup\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'weight_decay'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 119\u001b[1;33m                    group['eps'])\n\u001b[0m\u001b[0;32m    120\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mloss\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\.virtualenvs\\BeerPrediction-i6yarVT4\\lib\\site-packages\\torch\\optim\\_functional.py\u001b[0m in \u001b[0;36madam\u001b[1;34m(params, grads, exp_avgs, exp_avg_sqs, max_exp_avg_sqs, state_steps, amsgrad, beta1, beta2, lr, weight_decay, eps)\u001b[0m\n\u001b[0;32m     94\u001b[0m         \u001b[0mstep_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlr\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mbias_correction1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     95\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 96\u001b[1;33m         \u001b[0mparam\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maddcdiv_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexp_avg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdenom\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mstep_size\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     97\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     98\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 17\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 18\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 19\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 20\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 21\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 22\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 23\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 24\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 25\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 26\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 27\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 28\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 29\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 30\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 31\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 32\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 33\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 34\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 35\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 36\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 37\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 38\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 39\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 40\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 41\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 42\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 43\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 44\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 45\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 46\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 47\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 48\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n",
+      "Epoch: 49\n",
+      "\t(train)\t|\tLoss: 0.0417\t|\tAcc: 7.3%\n",
+      "\t(valid)\t|\tLoss: 0.0463\t|\tAcc: 7.4%\n"
      ]
     }
    ],
